--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: ruby
 sudo: false
 cache: bundler
 script:
-  - bundle exec rake
-  - bundle exec rubocop
+  - bundle exec rake spec
 rvm:
   - 2.3
   - 2.4
