--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 sudo: false
 cache: bundler
-bundler_args: --without tools development benchmarks
+bundler_args: --without tools benchmarks
 script:
   - bundle exec rake spec
 after_success:
