--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ cache: bundler
 bundler_args: --without tools benchmarks
 script:
   - bundle exec rake spec
+before_install:
+  - gem install bundler
+  - gem update --system
 after_success:
   - '[ -d coverage ] && bundle exec codeclimate-test-reporter'
 rvm:
