Fix code style for Rubocop 1.16.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -80,6 +80,11 @@ Metrics/MethodLength:
 Metrics/ClassLength:
   Enabled: false
 
+Metrics/ModuleLength:
+  Enabled: true
+  Exclude:
+    - "spec/**/*.rb"
+
 Metrics/BlockLength:
   Enabled: false
 
