--- a/changelog.yml
+++ b/changelog.yml
@@ -17,13 +17,13 @@
 - version: 0.2.0
   date: "2019-10-13"
   added:
-    - "[Abinoam P. Marques Jr. & Andrii Savchenko] Introduced `Dry::Inflector#camelize_upper`
+    - '[Abinoam P. Marques Jr. & Andrii Savchenko] Introduced `Dry::Inflector#camelize_upper`
       and `Dry::Inflector#camelize_lower`. `Dry::Inflector#camelize` is now an alias
-      for `Dry::Inflector#camelize_upper`."
-    - "```ruby"
-    - 'inflector.camelize_upper("data_mapper") # => "DataMapper"'
-    - 'inflector.camelize_lower("data_mapper") # => "dataMapper"'
-    - "```"
+      for `Dry::Inflector#camelize_upper`.
+      ```ruby
+      inflector.camelize_upper("data_mapper") # => "DataMapper"''
+      inflector.camelize_lower("data_mapper") # => "dataMapper"''
+      ```'
   fixed:
     - '[ecnal] Fixed singularization rules for words like "alias" or "status"'
 - version: 0.1.2
