--- a/changelog.yml
+++ b/changelog.yml
@@ -1,4 +1,9 @@
 ---
+- version: 1.0.0
+  summary:
+  date: 2022-11-04
+  changed:
+    - "Bumped version to 1.0.0 (@solnic)"
 - version: 0.3.0
   summary:
   date: "2022-07-12"
