Add homepage to config

--- a/repo-sync.yml
+++ b/repo-sync.yml
@@ -6,6 +6,7 @@ gemspec:
   authors: ["Hanakai team"]
   email: ["info@hanakai.org"]
   summary: "String inflections for dry-rb"
+  homepage: "https://dry-rb.org/gems/dry-inflector"
   required_ruby_version: ">= 3.1"
   development_dependencies:
     - bundler
